# omniscience

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.org  justfile
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: args.rs  lib.rs  main.rs  pretty.rs  tera.rs
cli/src/init/: mod.rs
cli/src/new/: mod.rs
cli/src/track/: mod.rs
cli/templates/: omni.toml
cli/templates/resources/templates/: note.typ
cli/templates/resources/typst/lib/: omni.typ
cli/templates/resources/typst/templates/: note.typ
lib/: Cargo.toml
lib/src/: config.rs  get_template.rs  lib.rs  link.rs  node.rs  omni_path.rs  track.rs
lib/src/format/: mod.rs  typst.rs
lib/src/format/typst/: compile.rs  mod.rs  query.rs
lsp/: Cargo.toml
lsp/src/: backend.rs  document.rs  err_json_rpc_ext.rs  err_log_ext.rs  links.rs  lsp_tracing_sub.rs  main.rs  project.rs
lsp/src/backend/: code_action.rs  completion.rs  execute_command.rs  find_root.rs  goto_definition.rs  hover.rs  language_server.rs  mod.rs  register_project.rs
typst_plugin/: Cargo.toml
typst_plugin/examples/: doc.html  doc.typ  omni.typ
typst_plugin/src/: lib.rs
