[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
omni = {path = "../lib"}
clap = { version = "4.5.53", features = ["derive"] }
miette.workspace = true
thiserror.workspace = true
serde.workspace = true
toml.workspace = true
owo-colors = "4"
anstyle = "1.0.10"
anstyle-owo-colors = "2.0.3"
tera = "1"
