[package]
name = "lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror.workspace = true
camino.workspace = true
tokio = { version = "1.48.0", features = ["full"] } # TODO: reduce features
tower-lsp-server = "0.23.0"
omni = { path = "../lib" }
log = { version = "0.4.29" }
ftail = "0.3.1"
dashmap = "6.1.0"
ropey = "1.6.1"
