[package]
name = "lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror.workspace = true
camino.workspace = true
toml.workspace = true
serde.workspace = true
tera.workspace = true
tokio = { version = "1.48.0", features = ["full"] } # TODO: reduce features
tower-lsp-server = "0.23.0"
omni = { path = "../lib" }
cli = { path = "../cli" }
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3" }
tracing-appender = "0.2"
serde_json.workspace = true
dashmap = "6.1.0"
ropey = "1.6.1"
itertools = { version = "0.14.0" }
notify = { version = "8.2.0" }
