[package]
name = "omniscience_typst"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true          # Enable link-time optimization
strip = true        # Strip symbols from binary*
opt-level = 'z'     # Optimize for size
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic

[dependencies]
wasm-minimal-protocol="0.1.0"
omni = { path = "../lib"}
toml.workspace = true
serde.workspace = true
spin = "0.10.0"
